--- a/layout1.html
+++ b/layout1.html
@@ -4,6 +4,7 @@
     <title>layout1</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/styles.css" />
+    <link href="https://bgj0127.github.io/responsive-web/"/>
   </head>
 
   <body>
