--- a/layout1.html
+++ b/layout1.html
@@ -3,8 +3,7 @@
   <head>
     <title>layout1</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/styles.css" />
-    <link href="https://bgj0127.github.io/responsive-web/"/>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
 
   <body>
