--- a/layout3_1.html
+++ b/layout3_1.html
@@ -6,54 +6,55 @@
     <title>Document</title>
     <style>
       * {
-        padding: 0;
         margin: 0;
+        padding: 0;
       }
       body {
         background: #f3e5f5;
       }
-      #warp {
+      #wrap {
         width: 1200px;
         margin: 0 auto;
       }
       header {
         width: 100%;
         height: 150px;
-        background-color: #9575cd;
+        background: #9575cd;
       }
       aside {
+        float: left;
         width: 30%;
         height: 700px;
-        background-color: #7e57c2;
-        float: left;
+        background: #7e57c2;
       }
       section {
+        float: left;
         width: 70%;
         height: 700px;
-        float: left;
-        background-color: #673ab7;
+        background: #673ab7;
       }
       footer {
+        clear: both;
         width: 100%;
         height: 150px;
-        background-color: #5e35b1;
-        clear: both;
+        background: #5e35b1;
       }
-
       @media (max-width: 1220px) {
-        #warp {
+        #wrap {
           width: 95%;
         }
       }
 
+      /* 화면 너비 0 ~ 768px */
       @media (max-width: 768px) {
-        #warp {
+        #wrap {
           width: 100%;
         }
       }
 
-      @media (max-width: 480px) {
-        #warp {
+      /* 화면 너비 0 ~ 480px */
+      @media (max-width: 500px) {
+        #wrap {
           width: 100%;
         }
         header {
